--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <div class="menu-bar">
         <img src="473704.png" class="logo">
                 <ul>
+			<h2>Quick Links</h2>
+                               <br>
+                               <ul>
+                                   <a href="index.html">
+                                   <li>Home</li>
+                                    </a>
+                                   <a href="Woody JR Tech.html">
+                                    <li>Staff</li>
+                                    </a>
+                                   <a href="Woody JR Tech About.html">
+                                    <li>About Us</li>
+                                    </a>
+									<a href="Woody JR Tech Enquiries.html">
+                                    <li>Enquiries</li>
+                                    </a>
                     <li><a href="index.html"><i class ="fa fa-home"></i>Home</a></li>
                     <li><a href="Woody JR Tech About.html"><i class ="fa fa-info"></i>About Us</a></li>
 					<li><a href="Woody JR Tech Enquiries.html">ContactUs</a></li>
